--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-static ">
-            <a href="https://github.com/shahir777/Elearn-backend-code-" target="_blank">
+            <a href="https://shahir777.github.io/netflixUI/" target="_blank">
               <div class="portfolio-wrap">
                 <img src="assets/img/portfolio/netflixUI.jpg" class="img-fluid" alt="">
               </div>
