--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>25 Nov 1999</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Bachelor's Degree:</strong> <span>BCA</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91 8075752737</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Kasaragod,India</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>India</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
@@ -354,7 +354,7 @@
                   I craft innovative applications and systems using programming languages, enhancing user experiences in
                   our digital world.</em></p>
               <ul>
-                <li>Kasaragod,Kerala, India</li>
+                <li>India</li>
                 <li>+91 8075752737</li>
                 <li>shahirmc5565@gmail.com</li>
               </ul>
